--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,14 @@
 {
   "builds": [
     {
-      "src": "school_management/wsgi.py",
+      "src": "Home/wsgi.py",
       "use": "@vercel/python"
     }
   ],
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "school_management/wsgi.py"
+      "dest": "Home/wsgi.py"
     }
   ]
 }
